Issue #25556: Add assertions to PyObject_GetItem() to ensure that an exception is raised when it returns NULL.

Simplify also ceval.c: rely on the fact that PyObject_GetItem() raised an
exception when it returns NULL.